Adding knative sauce

--- a/vertx-receiver/pom.xml
+++ b/vertx-receiver/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <vertx.version>4.0.2</vertx.version>
         <hdrhistogram.version>2.1.12</hdrhistogram.version>
     </properties>
@@ -27,5 +27,20 @@
             <version>${hdrhistogram.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>2.8.0</version>
+                <configuration>
+                    <to>
+                        <image>docker.io/slinkydeveloper/eventing-hyperfoil-benchmark-vertx-receiver</image>
+                    </to>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
