--- a/vertx-receiver/pom.xml
+++ b/vertx-receiver/pom.xml
@@ -35,6 +35,9 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>2.8.0</version>
                 <configuration>
+                    <from>
+                        <image>openjdk:17</image>
+                    </from>
                     <to>
                         <image>docker.io/slinkydeveloper/eventing-hyperfoil-benchmark-vertx-receiver</image>
                     </to>
