--- a/vertx-receiver/pom.xml
+++ b/vertx-receiver/pom.xml
@@ -11,20 +11,14 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <vertx.version>4.0.2</vertx.version>
-        <hdrhistogram.version>2.1.12</hdrhistogram.version>
+        <hyperfoil.version>0.15-SNAPSHOT</hyperfoil.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>vertx-core</artifactId>
-            <version>${vertx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hdrhistogram</groupId>
-            <artifactId>HdrHistogram</artifactId>
-            <version>${hdrhistogram.version}</version>
+            <groupId>io.hyperfoil</groupId>
+            <artifactId>hyperfoil-clustering</artifactId>
+            <version>${hyperfoil.version}</version>
         </dependency>
     </dependencies>
 
@@ -34,13 +28,28 @@
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>2.8.0</version>
+                <executions>
+                    <execution>
+                        <id>build-to-docker</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>dockerBuild</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <from>
                         <image>openjdk:17</image>
                     </from>
                     <to>
-                        <image>docker.io/slinkydeveloper/eventing-hyperfoil-benchmark-vertx-receiver</image>
+                        <image>quay.io/rvansa/eventing-hyperfoil-benchmark-vertx-receiver</image>
                     </to>
+                    <container>
+                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+<!--                        <jvmFlags>-->
+<!--                            <arg>-Dlog4j.configurationFile=file:///log4j2-debug.xml</arg>-->
+<!--                        </jvmFlags>-->
+                    </container>
                 </configuration>
             </plugin>
         </plugins>
