--- a/vertx-receiver/pom.xml
+++ b/vertx-receiver/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <hyperfoil.version>0.15-SNAPSHOT</hyperfoil.version>
+        <hyperfoil.version>0.15</hyperfoil.version>
     </properties>
 
     <dependencies>
