cd into right path

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -26,4 +26,4 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build the Hyperfoil Receiver image
-        run: mvn clean install
+        run: cd vertx-receiver && mvn clean install
