--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -13,17 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup java 17
+      - name: Setup java
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
-          java-version: 17
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          cache: 'maven'
+          java-version: ${{ matrix.java-version }}
+          distribution: 'temurin' # Eclipse Temurin, the new home for AdoptOpenJDK
       - name: Build the Hyperfoil Receiver image
         run: cd vertx-receiver && mvn clean install
