--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           cache: 'maven'
-          java-version: ${{ matrix.java-version }}
+          java-version: 17
           distribution: 'temurin' # Eclipse Temurin, the new home for AdoptOpenJDK
       - name: Build the Hyperfoil Receiver image
         run: cd vertx-receiver && mvn clean install
