:dizzy: separate CI build and post push
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -1,9 +1,6 @@
-name: CI Hyperfoil Image build
+name: CI Hyperfoil Image build for pull requests
 
 on:
-  push:
-    branches:
-      - "main"
   pull_request:
     branches:
       - "main"
