--- a/testcases/kafka-broker-ordered/200-trigger.yaml
+++ b/testcases/kafka-broker-ordered/200-trigger.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     kafka.eventing.knative.dev/delivery.order: ordered
 spec:
-  broker: my-kafka-broker 
+  broker: kafka-broker-ordered
   subscriber:
     ref:
       apiVersion: v1
