Adding annotations to be clear that the  is the MT Channel Based Broker, and we do not conflict with any given default broker, on the SUT
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/testcases/broker/eventing-broker/broker-imc-config/100-broker.yaml
+++ b/testcases/broker/eventing-broker/broker-imc-config/100-broker.yaml
@@ -1,4 +1,6 @@
 apiVersion: eventing.knative.dev/v1
 kind: Broker
 metadata:
+  annotations:
+    eventing.knative.dev/broker.class: MTChannelBasedBroker
   name: my-imc-broker
