--- a/installation/manifests/nightly/100-kafka.yaml
+++ b/installation/manifests/nightly/100-kafka.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: kafka
 spec:
   kafka:
-    version: 2.8.0
+    version: 3.0.0
     replicas: 3
     listeners:
       - name: plain
@@ -27,10 +27,12 @@ spec:
       offsets.topic.replication.factor: 3
       transaction.state.log.replication.factor: 3
       transaction.state.log.min.isr: 2
-      log.message.format.version: "2.8"
-      inter.broker.protocol.version: "2.8"
+      log.message.format.version: "3.0"
+      inter.broker.protocol.version: "3.0"
     storage:
-      type: ephemeral
+      type: persistent-claim
+      size: 100Gi
+      deleteClaim: true
     template:
       pod:
         affinity:
@@ -52,7 +54,9 @@ spec:
       initialDelaySeconds: 15
       timeoutSeconds: 5
     storage:
-      type: ephemeral
+      type: persistent-claim
+      size: 100Gi
+      deleteClaim: true
     template:
       pod:
         affinity:
