--- a/.github/workflows/scheduled-update-nightlies.yaml
+++ b/.github/workflows/scheduled-update-nightlies.yaml
@@ -2,7 +2,7 @@ name: Update nightlies
 
 on:
   schedule:
-    - "0 6 * * *" # Daily at 06:00.
+    - cron: "0 6 * * *" # Daily at 06:00.
   workflow_dispatch: # Manual workflow trigger
 
 jobs:
