Add PR title to update nightlies workflow
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/.github/workflows/scheduled-update-nightlies.yaml
+++ b/.github/workflows/scheduled-update-nightlies.yaml
@@ -16,3 +16,5 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           branch: bot/update-nightlies
+          title: "Update nightly artifacts"
+          commit-message: "Update nightly artifacts"
