--- a/installation/manifests/nightly/100-kafka.yaml
+++ b/installation/manifests/nightly/100-kafka.yaml
@@ -33,6 +33,10 @@ spec:
       type: persistent-claim
       size: 100Gi
       deleteClaim: true
+    resources:
+      requests:
+        memory: 2Gi
+        cpu: "1"
     template:
       pod:
         affinity:
@@ -57,6 +61,10 @@ spec:
       type: persistent-claim
       size: 100Gi
       deleteClaim: true
+    resources:
+      requests:
+        memory: 1Gi
+        cpu: 500m
     template:
       pod:
         affinity:
