--- a/installation/manifests/nightly/eventing-kafka-broker/eventing-kafka-channel.yaml
+++ b/installation/manifests/nightly/eventing-kafka-broker/eventing-kafka-channel.yaml
@@ -229,12 +229,29 @@ spec:
         app: kafka-channel-dispatcher
         kafka.eventing.knative.dev/release: "devel"
     spec:
+      # To avoid node becoming SPOF, spread our replicas to different nodes and zones.
+      topologySpreadConstraints:
+        - maxSkew: 2
+          topologyKey: topology.kubernetes.io/zone
+          whenUnsatisfiable: ScheduleAnyway
+          labelSelector:
+            matchLabels:
+              app: kafka-channel-dispatcher
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    app: kafka-channel-dispatcher
+                topologyKey: kubernetes.io/hostname
+              weight: 100
       serviceAccountName: knative-kafka-channel-data-plane
       securityContext:
         runAsNonRoot: true
       containers:
         - name: kafka-channel-dispatcher
-          image: quay.io/pierdipi/knative-kafka-broker-dispatcher:3d9f649a241274f2eaca5a4f70807555f93afda9d669927ab29393ee8f0da566
+          image: gcr.io/knative-nightly/knative-kafka-broker-dispatcher:ac63f664bb172ee09f6c5b0a4affda4063b4d2ba0c3083d6526dffeb59e8b16e
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /etc/config
@@ -295,6 +312,7 @@ spec:
           command:
             - "java"
           args:
+            - "-XX:+CrashOnOutOfMemoryError"
             - "-Dlogback.configurationFile=/etc/logging/config.xml"
             - "-jar"
             - "/app/app.jar"
@@ -376,10 +394,14 @@ spec:
         app: kafka-channel-receiver
         kafka.eventing.knative.dev/release: "devel"
     spec:
-      serviceAccountName: knative-kafka-channel-data-plane
-      securityContext:
-        runAsNonRoot: true
-      # To avoid node becoming SPOF, spread our replicas to different nodes.
+      # To avoid node becoming SPOF, spread our replicas to different nodes and zones.
+      topologySpreadConstraints:
+        - maxSkew: 2
+          topologyKey: topology.kubernetes.io/zone
+          whenUnsatisfiable: ScheduleAnyway
+          labelSelector:
+            matchLabels:
+              app: kafka-channel-receiver
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
@@ -389,9 +411,12 @@ spec:
                     app: kafka-channel-receiver
                 topologyKey: kubernetes.io/hostname
               weight: 100
+      serviceAccountName: knative-kafka-channel-data-plane
+      securityContext:
+        runAsNonRoot: true
       containers:
         - name: kafka-channel-receiver
-          image: quay.io/pierdipi/knative-kafka-broker-receiver:0ace54ef3e52a4b2bd8402ff22e96897e65afbd5f7ea2544ea39acfd1c392564
+          image: gcr.io/knative-nightly/knative-kafka-broker-receiver:23e4b5f6ce77796b5ae46f7bd904f3b617c508a9c570249faffcb2f56596eaf9
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /etc/config
@@ -453,6 +478,7 @@ spec:
           command:
             - "java"
           args:
+            - "-XX:+CrashOnOutOfMemoryError"
             - "-Dlogback.configurationFile=/etc/logging/config.xml"
             - "-jar"
             - "/app/app.jar"
@@ -514,6 +540,10 @@ spec:
   ports:
     - name: http
       port: 80
+      protocol: TCP
+      targetPort: 8080
+    - name: http-container
+      port: 8080
       protocol: TCP
       targetPort: 8080
     - name: http-metrics
